--- a/_posts/0000-01-02-Ank1x.md
+++ b/_posts/0000-01-02-Ank1x.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Just testing slides on github
+Bravery is by far the kindest word for stupidity.
 Use the left arrow to go back!
